[gd_scene load_steps=6 format=4 uid="uid://cg2ixbjectxu7"]

[ext_resource type="PackedScene" uid="uid://b46qouyu3lx2m" path="res://scenes/windows/window_base.tscn" id="1"]
[ext_resource type="Script" uid="uid://bwr7r5nykunv7" path="res://scenes/windows/window_network_exchanger.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bi10x6lm67mpi" path="res://textures/icons/bandwidth.png" id="3"]
[ext_resource type="PackedScene" uid="uid://co5icrrrwscgg" path="res://scenes/input_container.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b4efojcll7i7" path="res://scenes/output_container.tscn" id="5"]

[node name="WindowBase" instance=ExtResource("1")]
offset_bottom = 207.0
script = ExtResource("2")
window = "network_exchanger"

[node name="Icon" parent="TitlePanel/TitleContainer" index="0"]
texture = ExtResource("3")

[node name="Title" parent="TitlePanel/TitleContainer" index="1"]
text = "Network Exchanger"

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Download" parent="PanelContainer/MainContainer" index="0" instance=ExtResource("4")]
layout_mode = 2
default_resource = "download_speed"
limit = -1.0

[node name="Upload" parent="PanelContainer/MainContainer" index="1" instance=ExtResource("4")]
layout_mode = 2
default_resource = "upload_speed"
limit = -1.0

[node name="DownloadOut" parent="PanelContainer/MainContainer" index="2" instance=ExtResource("5")]
layout_mode = 2
default_resource = "download_speed"
limit = -1.0

[node name="UploadOut" parent="PanelContainer/MainContainer" index="3" instance=ExtResource("5")]
layout_mode = 2
default_resource = "upload_speed"
limit = -1.0

[connection signal="resource_set" from="PanelContainer/MainContainer/Download" to="." method="_on_file_resource_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/Upload" to="." method="_on_file_resource_set"]
